2005-09-29  Sven Neumann  <sven@gimp.org>

	* app/base/siox.c: optimizations by Tobias Lenz.

2005-09-29  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/progress.pdb: removed the "wrap" from
	gimp_progress_set_text() so it shows up as libgimp function again.

	* libgimp/gimpprogress_pdb.[ch]: regenerated.

	* libgimp/gimpprogress.[ch]: changed the old
	gimp_progress_set_text() to gimp_progress_set_text_printf() and
	added gimp_progress_init_printf(). (did this because the method of
	calling init(NULL) followed by set_text("foo") caused popup
	progress windows to be resized after they were shown).

	* libgimp/gimp.def: changed accordingly.

	* plug-ins/*/*.c: use gimp_progress_init_printf() instead of
	init(NULL) plus set_text(foo) and changed users of set_text() to
	use set_text_printf().	

2005-09-29  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-interface.c: removed the frame
	around the progress bar.

2005-09-29  Akkana Peck  <akkana@cvs.gnome.org>

	* plug-ins/common/zealouscrop.c:
	Update every 20 steps, instead of 19 out of every 20.

2005-09-29  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-console.c
	(script_fu_browse_callback): don't set the procedure browser
	transient to the script-fu console.

2005-09-28  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpprogressbox.c
	* plug-ins/script-fu/script-fu-interface.c: made progress bars HIG
	compliant (with italic label below).

	* app/widgets/gimpfiledialog.[ch]: use a GimpProgressBox intead of
	implementing the progress bar again.

2005-09-28  Michael Natterer  <mitch@gimp.org>

	* app/actions/dialogs-actions.c (dialogs_dockable_actions): fixed
	action parameter to match both the palette list and grid.
	Fixes bug #317435.

2005-09-28  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpscanner.c (gimp_scanner_new_file): mmap the
	config file using GMappedFile. Let's see how well this works...

2005-08-28  Kevin Cozens  <kcozens@cvs.gnome.org>
